tests/backend/checkmach/fail17.output
File "fail17.ml", line 2, characters 6-40:
Error (warning 197 [check-failed]): Annotation check for zero_alloc failed on function Fail17.f (camlFail17__f_HIDE_STAMP)
